Shadowjar fixes